Fixed Comment button not showing bug (part of #369)
git-svn-id: http://www.zenphoto.org/svn/trunk@1190 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/themes/stopdesign/css/comments-hide.css
+++ b/themes/stopdesign/css/comments-hide.css
@@ -1,9 +1,9 @@
-#hidecomments, #comments, #addcomment {
-  display:none;
-  }
+#hidecomments {
+  display: none;
+}
 #showcomments {
-  display:inline;
-  }
+  display: inline;
+}
 #addcommentbutton {
-  display:block;
-  }
+  display: block;
+}
