--- a/themes/stopdesign/css/comments-show.css
+++ b/themes/stopdesign/css/comments-show.css
@@ -1,9 +1,13 @@
-#showcomments, #addcomment {
-  display:none;
-  }
+#comments {
+	display: block;
+}
+
+#showcomments {
+  display: none;
+}
 #hidecomments {
-  display:inline;
-  }
+  display: inline;
+}
 #addcommentbutton {
-  display:block;
-  }
+  display: block;
+}
